--- a/web/source/sass/pages/strain/strains_root.scss
+++ b/web/source/sass/pages/strain/strains_root.scss
@@ -162,7 +162,7 @@
 
         .pager {
             margin: 1em auto;
-            text-align: right;
+            text-align: justify;
 
             span {
                 cursor: pointer;
